objects/Challenge_Participant__c.object
<CustomObject>
    <description>The members that are participating in each challenge along with their entries.</description>
    <fields>
        <fullName>Challenge__c</fullName>
        <label>Challenge</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Challenge_Participants</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Entry__c</fullName>
        <description>This field needs to change; should no longer be a formula. Programmatically set to true if 1 or more submission records &amp; false if 0.</description>
        <formula>IF( Submission_File__c != &apos;&apos;, &apos;Yes&apos;, &apos;No&apos;)</formula>
        <inlineHelpText>This field needs to change; should no longer be a formula. Programmatically set to true if 1 or more submission records &amp; false if 0.</inlineHelpText>
        <label>Entry?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Participant</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenge_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Money_Awarded__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Money awarded to the participant after the challenge has been scored.</description>
        <inlineHelpText>After the challenge has been scored.</inlineHelpText>
        <label>Money Awarded</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Place__c</fullName>
        <description>The place that the member finished in the challenge.</description>
        <label>Place</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Points_Awarded__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Points awarded to the participant after the challenge has been scored.</description>
        <inlineHelpText>After the challenge has been scored.</inlineHelpText>
        <label>Points Awarded</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQL_Id__c</fullName>
        <externalId>true</externalId>
        <label>SQL Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                    <default>true</default>
                    <label>Registered</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Watching</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_File__c</fullName>
        <description>DO NOT USE -- DEPRECATED!</description>
        <inlineHelpText>DO NOT USE -- DEPRECATED!</inlineHelpText>
        <label>Submission File (Deprecated)</label>
        <type>Url</type>
    </fields>
    <label>Challenge Participant</label>
    <nameField>
        <displayFormat>CP-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>